prefix for mail subject added

--- a/zapret.conf
+++ b/zapret.conf
@@ -43,3 +43,5 @@ removed = 1
 removed_ips = 1
 # Mail if there is only subnet without domains/urls in content block:
 alone = 1
+# If you have 2 or more places script work, add prefix to know where report come from
+subject_prefix = ''
