--- a/zapret.conf
+++ b/zapret.conf
@@ -2,7 +2,7 @@
 host = 'db.provider.com'
 user = 'db_user'
 password = 'db_password'
-name = 'db_name'
+name = 'db_name_here'
 
 [API]
 url = 'http://vigruzki.rkn.gov.ru/services/OperatorRequest/?wsdl'
