--- a/zapret.conf
+++ b/zapret.conf
@@ -29,6 +29,7 @@ ipv6_support = yes
 keep_resolved = true
 
 [MAIL]
+only_errors = no
 to = 'noc@provider.com', 'admin@provider.com'
 from = 'zapret@provider.com'
 server = 'mail.provider.com'
